--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "swiper": "^8.4.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
