--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,7 @@
     "better-react-carousel": "^1.1.1",
     "date-fns": "^2.28.0",
     "graphql": "^16.5.0",
+    "mediaelement": "^6.0.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
