--- a/Client/package.json
+++ b/Client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.3.0",
+    "react-vplayer": "^0.1.8",
     "swiper": "^8.4.4"
   },
   "devDependencies": {
