--- a/Client/package.json
+++ b/Client/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.3.0",
     "better-react-carousel": "^1.1.1",
     "date-fns": "^2.28.0",
     "graphql": "^16.5.0",
@@ -17,8 +20,10 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.6.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.3.0",
     "react-vplayer": "^0.1.8",
+    "styled-components": "^6.1.13",
     "swiper": "^8.4.4"
   },
   "devDependencies": {
